--- a/COMP2000ExerciseFarmBnB/app/build.gradle
+++ b/COMP2000ExerciseFarmBnB/app/build.gradle
@@ -15,6 +15,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+
     buildTypes {
         release {
             minifyEnabled false
@@ -31,7 +32,7 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.core:core:1.6.0"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
